Base styling updates + shift to flexbox to fix wrapping issues

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,3 +1,5 @@
 h1 {
   text-align: center;
+  width: 50%;
+  margin: 3% auto;
 }
