--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+* {
+  box-sizing: border-box;
+}
+
 html, body, #root {
   height: 100%;
-  box-sizing: border-box;
   overflow: auto;
 }
 
